Added Real Estate App, Portfolio Angular App, And Cryptocurrency Tracking App to the project section of the portfolio website

--- a/index.html
+++ b/index.html
@@ -128,12 +128,14 @@
         <div class="projects-container">
           <div class="project-side-tabs">
             <button class="tabs-button tabs-button-active" data-for-tab="1">PhotoWall</button>
-            <button class="tabs-button" data-for-tab="2">WeatherApp</button>
-            <button class="tabs-button" data-for-tab="3">Meal Finder App</button>
+            <button class="tabs-button" data-for-tab="2">Portfolio App</button>
+            <button class="tabs-button" data-for-tab="3">Real Estate App</button>
             <button class="tabs-button" data-for-tab="4">Crypto Tracker</button>
             <button class="tabs-button" data-for-tab="5">Ecommerce App</button>
             <button class="tabs-button" data-for-tab="6">Food Delivery App</button>
             <button class="tabs-button" data-for-tab="7">Dashoard Application</button>
+            <button class="tabs-button" data-for-tab="8">WeatherApp</button>
+            <button class="tabs-button" data-for-tab="9">Meal Finder App</button>
           </div>
           <div class="content-wrapper">
             <div class="project-content active-content" data-tab="1">
@@ -155,14 +157,14 @@
             <div class="project-content" data-tab="2">
               <div class="project-details">
                 <div class="project-img">
-                  <img src="./images/weather.jpg" alt="">
+                  <img src="./images/portfolio.PNG" alt="">
                 </div>
                 <div class="project-discription">
-                  <p>A nice weather application with weather api. built purely with HTML, CSS, and vanilla javascript.
+                  <p>A simple portfolio apllication built with angular.
                   </p>
                   <div class="link-container">
-                    <a href="https://github.com/BrainDoe/weatherApi" class="btn github-link">View Github</a>
-                    <a href="https://stupefied-haibt-2decda.netlify.app" class="btn site-link">View Site</a>
+                    <a href="https://github.com/BrainDoe/portfolio-project" class="btn github-link">View Github</a>
+                    <a href="https://amazing-ritchie-8c2f16.netlify.app" class="btn site-link">View Site</a>
                   </div>
                 </div>
               </div>
@@ -171,13 +173,14 @@
             <div class="project-content" data-tab="3">
               <div class="project-details">
                 <div class="project-img">
-                  <img src="./images/weather.jpg" alt="">
+                  <img src="./images/real-estate.PNG" alt="">
                 </div>
                 <div class="project-discription">
-                  <p>A meal finder application built purely with HTML, CSS, and vanilla javascript.</p>
+                  <p>A real estate application built with angular.
+                  </p>
                   <div class="link-container">
-                    <a href="https://github.com/BrainDoe/MealFinderApi" class="btn github-link">View Github</a>
-                    <a href="meal-finder-api-170262.netlify.app" class="btn site-link">View Site</a>
+                    <a href="https://github.com/BrainDoe/real-estate-app" class="btn github-link">View Github</a>
+                    <a href="https://gifted-swartz-56f3a7.netlify.app" class="btn site-link">View Site</a>
                   </div>
                 </div>
               </div>
@@ -242,6 +245,37 @@
                   <div class="link-container">
                     <a href="https://github.com/BrainDoe/angular-dashboard" class="btn github-link">View Github</a>
                     <a href="https://braindoe-dashboard-app.netlify.app/home" class="btn site-link">View Site</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="project-content" data-tab="8">
+              <div class="project-details">
+                <div class="project-img">
+                  <img src="./images/weather.jpg" alt="">
+                </div>
+                <div class="project-discription">
+                  <p>A nice weather application with weather api. built purely with HTML, CSS, and vanilla javascript.
+                  </p>
+                  <div class="link-container">
+                    <a href="https://github.com/BrainDoe/weatherApi" class="btn github-link">View Github</a>
+                    <a href="https://stupefied-haibt-2decda.netlify.app" class="btn site-link">View Site</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="project-content" data-tab="9">
+              <div class="project-details">
+                <div class="project-img">
+                  <img src="./images/weather.jpg" alt="">
+                </div>
+                <div class="project-discription">
+                  <p>A meal finder application built purely with HTML, CSS, and vanilla javascript.</p>
+                  <div class="link-container">
+                    <a href="https://github.com/BrainDoe/MealFinderApi" class="btn github-link">View Github</a>
+                    <a href="meal-finder-api-170262.netlify.app" class="btn site-link">View Site</a>
                   </div>
                 </div>
               </div>
