Corrected an image

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="project-content" data-tab="9">
               <div class="project-details">
                 <div class="project-img">
-                  <img src="./images/weather.jpg" alt="">
+                  <img src="./images/food.jpg" alt="">
                 </div>
                 <div class="project-discription">
                   <p>A meal finder application built purely with HTML, CSS, and vanilla javascript.</p>
