Added the Story app project to the portfolio

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <button class="tabs-button" data-for-tab="7">Dashoard Application</button>
             <button class="tabs-button" data-for-tab="8">WeatherApp</button>
             <button class="tabs-button" data-for-tab="9">Meal Finder App</button>
+            <button class="tabs-button" data-for-tab="10">Story App</button>
           </div>
           <div class="content-wrapper">
             <div class="project-content active-content" data-tab="1">
@@ -276,6 +277,21 @@
                   <div class="link-container">
                     <a href="https://github.com/BrainDoe/MealFinderApi" class="btn github-link">View Github</a>
                     <a href="meal-finder-api-170262.netlify.app" class="btn site-link">View Site</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="project-content" data-tab="10">
+              <div class="project-details">
+                <div class="project-img">
+                  <img src="./images/story-app.PNG" alt="">
+                </div>
+                <div class="project-discription">
+                  <p>A fullstack application that allows users to share their stories publicly or privately. With a very robust registration system, users are fully in control with their accounts. Users can register in the system, post a story publicly or privately, view and modify their profile, view their story and that of others, edit, delete their stories. </p>
+                  <p>Angular was used for the frontend. The backend is powered by nodejs server.</p>
+                  <div class="link-container">
+                    <a href="https://github.com/BrainDoe/storybook-angular" class="btn github-link">View Github</a>
+                    <a href="https://epic-goldwasser-62e163.netlify.app" class="btn site-link">View Site</a>
                   </div>
                 </div>
               </div>
