--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 </div>
                 <div class="project-discription">
                   <p>A fullstack application that allows users to share their stories publicly or privately. With a very robust registration system, users are fully in control with their accounts. Users can register in the system, post a story publicly or privately, view and modify their profile, view their story and that of others, edit, delete their stories. </p>
-                  <p>Angular was used for the frontend. The backend is powered by nodejs server.</p>
+                  <p>Angular was used for the frontend. The backend is powered by nodejs server. The project is still in progress</p>
                   <div class="link-container">
                     <a href="https://github.com/BrainDoe/storybook-angular" class="btn github-link">View Github</a>
                     <a href="https://epic-goldwasser-62e163.netlify.app" class="btn site-link">View Site</a>
